After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 639151 - Fix gcc uninitialized variable warning
Fix gcc uninitialized variable warning
Status: RESOLVED FIXED
Product: gnome-packagekit
Classification: Core
Component: general
git master
Other Linux
: Normal normal
: ---
Assigned To: gnome-packagekit-maint
gnome-packagekit-maint
Depends on:
Blocks:
 
 
Reported: 2011-01-10 15:57 UTC by Frederic Crozat
Modified: 2011-01-10 16:32 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
Fix gcc uninitialized variable warning. (844 bytes, patch)
2011-01-10 15:57 UTC, Frederic Crozat
committed Details | Review

Description Frederic Crozat 2011-01-10 15:57:23 UTC
Attached patch fixes a warning with gcc (group should be NULL for creating the first radio button)
Comment 1 Frederic Crozat 2011-01-10 15:57:42 UTC
Created attachment 177941 [details] [review]
Fix gcc uninitialized variable warning.
Comment 2 Richard Hughes 2011-01-10 16:09:45 UTC
Dude, please just commit this stuff without asking in the future. I trust you, and you know what you're doing. :-)
Comment 3 Frederic Crozat 2011-01-10 16:15:19 UTC
Attachment 177941 [details] pushed as 9106acf - Fix gcc uninitialized variable warning.
Comment 4 Frederic Crozat 2011-01-10 16:15:44 UTC
sir, yes, sir :)

it is because git-bz is so easy to use :)
Comment 5 Richard Hughes 2011-01-10 16:32:01 UTC
Thanks dude, appreciated.