Fix gcc uninitialized variable warning.

https://bugzilla.gnome.org/show_bug.cgi?id=639151